# ptk-admin-panel

./: .gitignore  Justfile  REACT_MIGRATION_GUIDE.md  README.md  conns.txt  pyproject.toml  zombie_maker.py
src/ptk_admin_panel/: __init__.py  __main__.py  api.py  app.py  auth.py  scanner.py  util_funcs.py  views.py
src/ptk_admin_panel/static/: style.css
src/ptk_admin_panel/templates/: _connections.html  _info.html  _ssh_status.html  base.html  git.html  home.html  login.html  network.html
src/ptk_admin_panel/templates/partials/: _connections.html  _git.html  _info.html  _modified_files.html  _placeholder.html  _ssh_status.html  _tmux.html  _uptime.html  _zombies.html
src/ptk_admin_panel/util_funcs/: __init__.py  common.py  get_recent.py  git_detect.py  process_info.py  ssh_detector.py  tmux.py  uptime.py  zombie.py
